syntax = "proto3";

package rs.ac.uns.ftn.grpc;
import "Notification/Support/Grpc/Protos/model.proto";

service GuestNotificationGrpcService {
  rpc communicate (MessageProto) returns (MessageResponseProto);
}